--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,14 +41,14 @@
       </ul>
       <!--banner start-->
       <div class="banner row" id="banner">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 noPadd" style="height:100%">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padd" style="height:100%">
           <!--background slide show start-->
-          <div class="bannerPart"> <%=image_tag "website/banner.jpg", class: "bannerImg"%> </div>
+          <div class="banner-part"> <%=image_tag "website/banner.jpg", class: "bannerImg"%> </div>
           <!--background slide show end-->
         </div>
       </div>
       <!--banner end-->
-      <div id="home" class="bannerText container">
+      <div id="home" class="banner-text container">
         <h1><%=t(:name, scope: [:template])%></h1>
         <h2><%=t(:title, scope: [:template])%></h2>
       </div>
