--- a/app/assets/stylesheets/fallback.css.scss
+++ b/app/assets/stylesheets/fallback.css.scss
@@ -1,10 +1,13 @@
 .ri-grid {
-	width: 600px;
-}
-.ri-grid ul li, .ri-grid ul li a {
-	width: 100px;
-	height: 100px;
-}
-.ri-grid ul li a img {
-	width: 100%;
+  width: 600px;
+
+  ul li,
+  ul li a {
+    height: 100px;
+    width: 100px;
+  }
+
+  ul li a img {
+    width: 100%;
+  }
 }
