--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -1,43 +1,46 @@
-/*----------------------------------------------------
- 12. Footer Style
-------------------------------------------------------*/
-.footer{
-	background:#00bdbd;
-}
-.footer .container{
-	padding:40px 0;
-}
+//----------------------------------------------------
+// 12. Footer Style
+//------------------------------------------------------
+.footer {
+  background: #00bdbd;
 
-.footer ul{
-	margin:0 auto;
-	text-align:center;
-	list-style-type:none;
-}
-.footer ul li{
-	display:inline-block;
-	text-align:center;
-	background:#ffffff;
-	color:#00bdbd;
-	line-height:42px;
-	margin:0 6px;
-	width:42px !important;
-	height:42px !important;
-	
-	-webkit-border-radius: 50%;
-    border-radius: 50%;
-}
-.footer ul li:hover{
-	background:#0a9f9f ;
-}
-.footer ul li:hover	a{
-	color:#fff;
-}
+  .container {
+    padding: 40px 0;
+  }
 
-.footer ul li a{
-	color:#00bdbd;
-	width:42px !important;
-	height:42px !important;
-}
-.footer ul li a i{
-	line-height:42px !important;
+  ul {
+    list-style-type: none;
+    margin: 0 auto;
+    text-align: center;
+
+    li {
+      background: #fff;
+      border-radius: 50%;
+      color: #00bdbd;
+      display: inline-block;
+      height: 42px;
+      line-height: 42px;
+      margin: 0 6px;
+      text-align: center;
+      width: 42px;
+
+      &:hover {
+        background: #0a9f9f;
+
+        a {
+          color: #fff;
+        }
+      }
+
+      a {
+        color: #00bdbd;
+        height: 42px;
+        width: 42px;
+
+        i {
+          line-height: 42px;
+        }
+      }
+    }
+  }
 }
