--- a/app/assets/stylesheets/reset.css.scss
+++ b/app/assets/stylesheets/reset.css.scss
@@ -1,24 +1,26 @@
-/*----------------------------------------------------
-/* 1. CSS Reset
-------------------------------------------------------*/
+//----------------------------------------------------
+// 1. CSS Reset
+//----------------------------------------------------
 
 * {
-	padding:0;
-	margin:0;
+  margin: 0;
+  padding: 0;
 }
+
 body {
-	color:#fff;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 300;
-	position:relative;
-	background:#000;
-	width:100%;
-	height:100%;
-	overflow: scroll;
-	overflow-x: hidden;
+  background: #000;
+  color: #fff;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  height: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
+  position: relative;
+  width: 100%;
 }
+
 a {
-	text-decoration:none;
-	color:#fff;
-	outline:none;
+  color: #fff;
+  outline: none;
+  text-decoration: none;
 }
