--- a/app/assets/stylesheets/setup.css.scss
+++ b/app/assets/stylesheets/setup.css.scss
@@ -1,90 +1,93 @@
-/*----------------------------------------------------
- 2.	Document Setup
-------------------------------------------------------*/
-.wrapper{
-	width:100%;
-}
-.spHeight{
-	padding-top:63px;
+//----------------------------------------------------
+// 2. Document Setup
+//----------------------------------------------------
+.wrapper {
+  width: 100%;
 }
 
-.noMar{
-	margin:0 !important;
-}
-.noPadd{
-	padding:0px !important;
+.sp-height {
+  padding-top: 63px;
 }
 
-.container .row{
-	margin:0px;
+.no-padd {
+  padding: 0;
 }
 
-p{
-	font-family: 'Open Sans', sans-serif;
-	font-size:14px;
-	line-height:21px;
-	font-weight:400;
-	padding-bottom:22px;
-	margin:0px;
-}
-h1{
-	font-family: 'Open Sans', sans-serif;
-	font-size:80px;
-	line-height:90px;
-	font-weight:700;
-	margin:0px;
-	padding-bottom:8px;
-}
-h2{
-	font-family: 'Open Sans', sans-serif;
-	font-size:30px;
-	line-height:38px;
-	padding-bottom:0px;
-	font-weight:300;
-	text-transform:uppercase;
-	margin:0px;
-	letter-spacing: 12px;
-}
-h3{
-	font-family: 'Open Sans', sans-serif;
-	font-size:24px;
-	line-height:30px;
-	padding-bottom:6px;
-	font-weight:400;
-	margin:0px;
-}
-h4{
-	font-family: 'Open Sans', sans-serif;
-	font-size:19px;
-	line-height:24px;
-	padding-bottom:6px;
-	font-weight:600;
-	margin:0px;
-}
-h5{
-	font-family: 'Open Sans', sans-serif;
-	font-size:16px;
-	line-height:24px;
-	padding-bottom:6px;
-	font-weight:400;
-	margin:0px;
+.container .row {
+  margin: 0;
 }
 
-h4.subHeading{
-	font-weight:600;
-	font-size:18px;
-	padding-bottom:22px;
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  margin: 0;
+  padding-bottom: 22px;
 }
 
-.heading{
-	text-align:center;
-	padding-bottom:45px;
+h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 90px;
+  margin: 0;
+  padding-bottom: 8px;
 }
 
-.topmar{
-	margin-top:-100px;
+h2 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 30px;
+  font-weight: 300;
+  letter-spacing: 12px;
+  line-height: 38px;
+  margin: 0;
+  padding-bottom: 0;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 30px;
+  margin: 0;
+  padding-bottom: 6px;
+}
+
+h4 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 19px;
+  font-weight: 600;
+  line-height: 24px;
+  margin: 0;
+  padding-bottom: 6px;
+
+  &.sub-heading {
+    font-size: 18px;
+    font-weight: 600;
+    padding-bottom: 22px;
+  }
+}
+
+h5 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin: 0;
+  padding-bottom: 6px;
+}
+
+.heading {
+  padding-bottom: 45px;
+  text-align: center;
+}
+
+.topmar {
+  margin-top: -100px;
 }
 
 .modal-title {
-	color: #000;
+  color: #000;
 }
