--- a/app/views/educations/_education.html.erb
+++ b/app/views/educations/_education.html.erb
@@ -1,10 +1,10 @@
-<div class="row workDetails" itemprop="alumniOf" itemscope itemtype="https://schema.org/CollegeOrUniversity">
+<div class="row work-details" itemprop="alumniOf" itemscope itemtype="https://schema.org/CollegeOrUniversity">
   <div class="col-xs-12 col-sm-3 col-md-2 col-lg-2">
-    <div class="workYear"><%=ldate(education.start_date)%><br><%=ldate(education.end_date)%></div>
+    <div class="work-year"><%=ldate(education.start_date)%><br><%=ldate(education.end_date)%></div>
   </div>
-  <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 rightArea">
+  <div class="col-xs-12 col-sm-9 col-md-10 col-lg-10 right-area">
     <div class="arrowpart"></div>
-    <div class="exCon">
+    <div class="ex-con">
       <h4><%=education.institution%></h4>
       <h5 itemprop="legalName"><%=education.course%></h5>
       <p itemprop="description"><%=education.description%></p>
