--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,35 +45,16 @@
   </div>
 </section>
 <!--education end-->
-<!--portfolio start-->
-<section class="portfolio" id="portfolio">
-  <div class="container">
-    <div class="heading">
-      <h2><%=t(:title, scope: [:portfolio])%></h2>
-      <p><%=t(:subtitle, scope: [:portfolio])%></p>
-    </div>
-    <div class="portfolioFilter">
-      <ul>
-        <li><a href="#" data-filter="*" class="current"><%=t(:all, scope: [:portfolio, :filters])%></a></li>
-        <%=render partial: 'portfolios/category', collection: categories(@portfolios), as: :category%>
-      </ul>
-    </div>
-    <ul class="portfolioContainer row">
-      <%=render @portfolios%>
-    </ul>
-  </div>
-</section>
-<!--portfolio end-->
 <!--contact start-->
 <section class="contact" id="contact">
-  <div class="container topCon">
+  <div class="container top-con">
     <div class="heading">
       <h2><%=t(:title, scope: [:contact])%></h2>
       <p><%=t(:subtitle, scope: [:contact])%></p>
     </div>
   </div>
 </section>
-<section class="contactDetails">
+<section class="contact-details">
   <div class="container">
     <!--contact info start-->
     <%=render partial: 'abouts/contact', collection: @about, as: :about%>
