--- a/app/assets/stylesheets/slider.css.scss
+++ b/app/assets/stylesheets/slider.css.scss
@@ -1,119 +1,110 @@
-/*---------------------------------------------------------------------------------
- 4. Background slider CSS style
--------------------------------------------------------------------------------*/
+//-------------------------------------------------------------------------------
+// 4. Background slider CSS style
+//-------------------------------------------------------------------------------
+
 .ri-grid {
-  margin:0px auto;
-  position: relative;
   height: auto;
-}
-.ri-grid ul {
-  list-style: none;
-  display: block;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-.ri-grid ul:before, .ri-grid ul:after {
-  content: '';
-  display: table;
-}
-.ri-grid ul:after {
-  clear: both;
-}
-.ri-grid ul {
-  zoom: 1; /* For IE 6/7 (trigger hasLayout) */
-}
-.ri-grid ul li {
-  -webkit-perspective: 400px;
-  -moz-perspective: 400px;
-  -o-perspective: 400px;
-  -ms-perspective: 400px;
-  perspective: 400px;
-  margin: 0;
-  padding: 0;
-  float: left;
+  margin: 0 auto;
   position: relative;
-  display: block;
-  overflow: hidden;
-  background: #000;
-}
-.ri-grid ul li a {
-  display: block;
-  outline: none;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -o-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  -webkit-background-size: 100% 100%;
-  -moz-background-size: 100% 100%;
-  background-size: 100% 100%;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-color: #333;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-}
-/* Grid wrapper sizes */
-.ri-grid-size-1 {
-  width: 55%;
-}
-.ri-grid-size-2 {
-  width: 100%;
-}
-.ri-grid-size-3 {
-  width: 100%;
-  margin-top: 0px;
-}
-/* Shadow style */
-.ri-shadow:after, .ri-shadow:before {
-  content: "";
-  position: absolute;
-  z-index: -2;
-  bottom: 15px;
-  left: 10px;
-  width: 50%;
-  height: 20%;
-  max-width: 300px;
-  max-height: 100px;
-  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-  -webkit-transform: rotate(-3deg);
-  -moz-transform: rotate(-3deg);
-  -ms-transform: rotate(-3deg);
-  -o-transform: rotate(-3deg);
-  transform: rotate(-3deg);
-}
-.ri-shadow:after {
-  right: 10px;
-  left: auto;
-  -webkit-transform: rotate(3deg);
-  -moz-transform: rotate(3deg);
-  -ms-transform: rotate(3deg);
-  -o-transform: rotate(3deg);
-  transform: rotate(3deg);
-}
-.ri-grid-loading:after, .ri-grid-loading:before {
-  display: none;
-}
-.ri-loading-image {
-  display: none;
-}
-.ri-grid-loading .ri-loading-image {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  left: 50%;
-  margin: 100px 0 0 -15px;
-  display: block;
+  zoom: 1; // For IE 6/7 (trigger hasLayout)
+
+  ul {
+    display: block;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+
+    &::before,
+    &::after {
+      content: '';
+      display: table;
+    }
+
+    &::after {
+      clear: both;
+    }
+
+    li {
+      background: #000;
+      display: block;
+      float: left;
+      margin: 0;
+      overflow: hidden;
+      padding: 0;
+      perspective: 400px;
+      position: relative;
+
+      a {
+        backface-visibility: hidden;
+        background-color: #333;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        box-sizing: content-box;
+        display: block;
+        height: 100%;
+        left: 0;
+        outline: none;
+        position: absolute;
+        top: 0;
+        transform-style: preserve-3d;
+        width: 100%;
+      }
+    }
+  }
+
+  //Grid wrapper sizes
+  .ri-grid-size-1 {
+    width: 55%;
+  }
+
+  .ri-grid-size-2 {
+    width: 100%;
+  }
+
+  .ri-grid-size-3 {
+    margin-top: 0;
+    width: 100%;
+  }
+
+  //Shadow style
+  .ri-shadow::after,
+  .ri-shadow::before {
+    bottom: 15px;
+    box-shadow: 0 15px 10px rgba(0, 0, 0, .7);
+    content: '';
+    height: 20%;
+    left: 10px;
+    max-height: 100px;
+    max-width: 300px;
+    position: absolute;
+    transform: rotate(-3deg);
+    width: 50%;
+    z-index: -2;
+  }
+
+  .ri-shadow::after {
+    left: auto;
+    right: 10px;
+    transform: rotate(3deg);
+  }
+
+  .ri-grid-loading::after,
+  .ri-grid-loading::before {
+    display: none;
+  }
+
+  .ri-loading-image {
+    display: none;
+  }
+
+  .ri-grid-loading .ri-loading-image {
+    display: block;
+    height: 30px;
+    left: 50%;
+    margin: 100px 0 0 -15px;
+    position: relative;
+    width: 30px;
+  }
 }
