--- a/app/views/skills/_skill.html.erb
+++ b/app/views/skills/_skill.html.erb
@@ -1,5 +1,5 @@
-<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skillsArea">
-  <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skilBg" data-percent="<%=skill.value%>"> <span class="percent"></span> </span>
+<div class=" col-xs-12 col-sm-4 col-md-4 col-lg-4 skills-area">
+  <div class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 skills"> <span class="chart skill-bg" data-percent="<%=skill.value%>"> <span class="percent"></span> </span>
     <h4><%=skill.name%></h4>
     <p><%=skill.hero%></p>
   </div>
