--- a/app/assets/stylesheets/responsive.css.scss
+++ b/app/assets/stylesheets/responsive.css.scss
@@ -55,11 +55,11 @@
     min-height: 700px;
   }
 
-  #header h3 {
+  header h3 {
     font-size: 38px;
   }
 
-  #header h3 span {
+  header h3 span {
     font-size: 16px;
   }
 
@@ -79,7 +79,7 @@
     padding-right: 15px;
   }
 
-  ul.portfolio-container li.col-xs-6 {
+  .portfolio-container .col-xs-6 {
     min-height: 85px;
     width: 49%;
   }
@@ -117,7 +117,7 @@
     margin-left: 0;
   }
 
-  ul.navbar-nav li a {
+  .navbar-nav li a {
     display: block;
   }
 
@@ -127,8 +127,8 @@
 }
 
 @media screen and (max-width: 650px) {
-  #wrapper {
-    top: 200px !important;
+  .wrapper {
+    top: 200px;
   }
 
   .upbox {
@@ -170,7 +170,7 @@
 }
 
 @media screen and (max-width: 400px) {
-  ul.slides {
+  .slides {
     height: 100%;
     min-height: 600px;
   }
@@ -187,7 +187,7 @@
     width: 100%;
   }
 
-  ul.portfolio-container li.col-xs-6 {
+  .portfolio-container .col-xs-6 {
     width: 100%;
   }
 
