--- a/app/assets/stylesheets/i18n.scss
+++ b/app/assets/stylesheets/i18n.scss
@@ -30,7 +30,7 @@
         background-position: -32px 0;
       }
 
-      &.gb {
+      &.en {
         background-position: 0 -32px;
       }
     }
