--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <!--google font style-->
   <!--font-family: 'Open Sans', sans-serif;-->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
+  <%= Gon::Base.render_data %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_pack_tag 'application', type: 'application/javascript' %>
 
@@ -31,71 +32,80 @@
   <![endif]-->
 </head>
 <body id="home">
-  <!--wrapper start-->
   <div class="wrapper" id="wrapper" itemscope itemtype="https://schema.org/Person">
-    <header>
-      <ul class="i18n">
-        <li><%=link_to "BR", home_path(:br), class: "flag br" %></li>
-        <li><%=link_to "EN", home_path(:en), class: "flag gb" %></li>
-      </ul>
-      <!--banner start-->
-      <div class="banner row" id="banner">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padd" style="height:100%">
-          <!--background slide show start-->
-          <div class="banner-part"> <%=image_tag "website/banner.jpg", class: "banner-img"%> </div>
-          <!--background slide show end-->
+    <vue-header inline-template>
+      <header>
+        <ul class="i18n">
+          <li v-for="item in flag_links" :key="item.id">
+            <menu-item :item="item" />
+          </li>
+        </ul>
+        <!--banner start-->
+        <div class="banner">
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padd" style="height:100%">
+              <!--background slide show start-->
+              <div class="banner-part"> <%= image_tag "website/banner.jpg", class: "banner-img" %> </div>
+              <!--background slide show end-->
+            </div>
+          </div>
+          <!--banner end-->
+          <div class="banner-text container">
+            <h1><%=t(:name, scope: [:template])%></h1>
+            <h2><%=t(:title, scope: [:template])%></h2>
+          </div>
         </div>
-      </div>
-      <!--banner end-->
-      <div class="banner-text container">
-        <h1><%=t(:name, scope: [:template])%></h1>
-        <h2><%=t(:title, scope: [:template])%></h2>
-      </div>
-      <!--menu start-->
-      <div class="menu">
-        <div class="navbar-wrapper is-stuck">
-          <div class="container">
-            <div class="navwrapper">
-              <div class="navbar navbar-inverse navbar-static-top">
-                <div class="container">
-                  <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                    <a class="navbar-brand" href="#">Menu</a>
-                  </div>
-                  <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                      <li class="menuItem active"><a href="#home"><%=t(:home, scope: [:template, :menu])%></a></li>
-                      <li class="menuItem"><a href="#aboutme"><%=t(:about, scope: [:template, :menu])%></a></li>
-                      <li class="menuItem"><a href="#technical"><%=t(:skills, scope: [:template, :menu])%></a></li>
-                      <li class="menuItem"><a href="#experience"><%=t(:experience, scope: [:template, :menu])%></a></li>
-                      <li class="menuItem"><a href="#education"><%=t(:education, scope: [:template, :menu])%></a></li>
-                      <li class="menuItem"><a href="#contact"><%=t(:contact, scope: [:template, :menu])%></a></li>
-                      <li class="menuItem"><a href="#footer"><%=t(:social, scope: [:template, :menu])%></a></li>
-                    </ul>
+        <!--menu start-->
+        <div class="menu">
+          <div class="navbar-wrapper is-stuck">
+            <div class="container">
+              <div class="navwrapper">
+                <div class="navbar navbar-inverse navbar-static-top">
+                  <div class="container">
+                    <div class="navbar-header">
+                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                      </button>
+                      <a class="navbar-brand" href="#">Menu</a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                      <ul class="nav navbar-nav">
+                        <li class="menuItem" v-for="item in menu_links" :key="item.id">
+                          <menu-item :item="item" />
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
+              <!-- End Navbar -->
             </div>
-            <!-- End Navbar -->
           </div>
         </div>
+        <!--menu end-->
+      </header>
+    </vue-header>
+    <vue-body inline-template>
+      <div>
+        <%= yield %>
       </div>
-      <!--menu end-->
-    </header>
-    <%= yield %>
-    <!--footer start-->
-    <section class="footer" id="footer">
-      <div class="container">
-        <ul>
-          <li><a href="https://github.com/gmmcal" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
-          <li><a href="https://linkedin.com/in/gmmcal" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
-          <li><a href="https://twitter.com/gmmcal" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-        </ul>
-      </div>
-    </section>
-    <!--footer end-->
+    </vue-body>
+    <vue-footer inline-template>
+      <!--footer start-->
+      <section class="footer" id="footer">
+        <div class="container">
+          <ul>
+            <li><a href="https://github.com/gmmcal" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
+            <li><a href="https://linkedin.com/in/gmmcal" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
+            <li><a href="https://twitter.com/gmmcal" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
+          </ul>
+        </div>
+      </section>
+      <!--footer end-->
+    </vue-footer>
   </div>
-  <!--wrapper end-->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
