Migrate frontent to Vue.js

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,64 +1,1 @@
-<!--about me start-->
-<section class="aboutme" id="aboutme">
-  <div class="container">
-    <div class="heading">
-      <h2><%=t(:title, scope: [:about])%></h2>
-    </div>
-    <div class="row">
-      <%=render @about%>
-    </div>
-  </div>
-</section>
-<!--about me end-->
-<!--technical start-->
-<section class="technical" id="technical">
-  <div class="container">
-    <div class="heading">
-      <h2><%=t(:title, scope: [:skills])%></h2>
-      <p><%=t(:subtitle, scope: [:skills])%></p>
-    </div>
-    <div class="row">
-      <%=render @skills%>
-    </div>
-  </div>
-</section>
-<!--technical end-->
-<!--experience start-->
-<section class="experience" id="experience">
-  <div class="container">
-    <div class="heading">
-      <h2><%=t(:title, scope: [:experience])%></h2>
-      <p><%=t(:subtitle, scope: [:experience])%></p>
-    </div>
-    <%=render @work_experiences%>
-  </div>
-</section>
-<!--experience end-->
-<!--education start-->
-<section class="education" id="education">
-  <div class="container">
-    <div class="heading">
-      <h2><%=t(:title, scope: [:education])%></h2>
-      <p><%=t(:subtitle, scope: [:education])%></p>
-    </div>
-    <%=render @educations%>
-  </div>
-</section>
-<!--education end-->
-<!--contact start-->
-<section class="contact" id="contact">
-  <div class="container top-con">
-    <div class="heading">
-      <h2><%=t(:title, scope: [:contact])%></h2>
-      <p><%=t(:subtitle, scope: [:contact])%></p>
-    </div>
-  </div>
-</section>
-<section class="contact-details">
-  <div class="container">
-    <!--contact info start-->
-    <%=render partial: 'abouts/contact', collection: @about, as: :about%>
-    <!--contact info end-->
-  </div>
-</section>
-<!--contact end-->
+<vue-body image="<%=asset_path("website/gmmcal.png")%>"></vue-body>
