--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
   <%= Gon::Base.render_data %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'modernizr', 'data-turbolinks-track' => true %>
   <%= javascript_pack_tag 'application', type: 'application/javascript' %>
 
   <noscript>
@@ -31,89 +32,11 @@
     <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track' => true %>
   <![endif]-->
 </head>
-<body id="home">
+<body id="home" data-locale="<%= I18n.locale %>">
   <div class="wrapper" id="wrapper" itemscope itemtype="https://schema.org/Person">
-    <vue-header inline-template>
-      <header>
-        <ul class="i18n">
-          <li v-for="item in flag_links" :key="item.id">
-            <menu-item :item="item" />
-          </li>
-        </ul>
-        <!--banner start-->
-        <div class="banner">
-          <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padd" style="height:100%">
-              <!--background slide show start-->
-              <div class="banner-part"> <%= image_tag "website/banner.jpg", class: "banner-img" %> </div>
-              <!--background slide show end-->
-            </div>
-          </div>
-          <!--banner end-->
-          <div class="banner-text container">
-            <h1><%=t(:name, scope: [:template])%></h1>
-            <h2><%=t(:title, scope: [:template])%></h2>
-          </div>
-        </div>
-        <!--menu start-->
-        <div class="menu">
-          <div class="navbar-wrapper is-stuck">
-            <div class="container">
-              <div class="navwrapper">
-                <div class="navbar navbar-inverse navbar-static-top">
-                  <div class="container">
-                    <div class="navbar-header">
-                      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                      </button>
-                      <a class="navbar-brand" href="#">Menu</a>
-                    </div>
-                    <div class="navbar-collapse collapse">
-                      <ul class="nav navbar-nav">
-                        <li class="menuItem" v-for="item in menu_links" :key="item.id">
-                          <menu-item :item="item" />
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- End Navbar -->
-            </div>
-          </div>
-        </div>
-        <!--menu end-->
-      </header>
-    </vue-header>
-    <vue-body inline-template>
-      <div>
-        <%= yield %>
-      </div>
-    </vue-body>
-    <vue-footer inline-template>
-      <!--footer start-->
-      <section class="footer" id="footer">
-        <div class="container">
-          <ul>
-            <li><a href="https://github.com/gmmcal" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
-            <li><a href="https://linkedin.com/in/gmmcal" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
-            <li><a href="https://twitter.com/gmmcal" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></li>
-          </ul>
-        </div>
-      </section>
-      <!--footer end-->
-    </vue-footer>
+    <vue-header image="<%=asset_path("website/banner.jpg")%>"></vue-header>
+    <%=yield%>
+    <vue-footer></vue-footer>
   </div>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-12085288-1', 'auto');
-  ga('send', 'pageview');
-  </script>
 </body>
 </html>
