UI fixes and improvements

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -44,6 +44,10 @@ header {
     height: 100%;
   }
 
+  .navbar-wrapper {
+    min-height: 62px;
+  }
+
   //------------------------------------
   // 3.1 Slide show background control
   //--------------------------------------
