--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,12 +31,16 @@
     <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track' => true %>
   <![endif]-->
 </head>
-<body id="home" data-locale="<%= I18n.locale %>">
+<body id="home" class="<%= I18n.locale %>" data-locale="<%= I18n.locale %>">
   <div class="wrapper" id="wrapper" itemscope itemtype="https://schema.org/Person">
     <vue-header image="<%=asset_path("website/banner.jpg")%>"></vue-header>
     <%=yield%>
     <vue-footer></vue-footer>
   </div>
+  <noscript>
+    <%=render 'no_js'%>
+  </noscript>
+  <%=render 'schema'%>
   <%= Gon::Base.render_data %>
 </body>
 </html>
