--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
   <![endif]-->
 </head>
 <body id="home" class="<%= I18n.locale %>" data-locale="<%= I18n.locale %>">
-  <div class="wrapper" id="wrapper" itemscope itemtype="https://schema.org/Person">
+  <div class="wrapper" id="wrapper">
     <vue-header image="<%=asset_path("website/banner.jpg")%>"></vue-header>
     <%=yield%>
     <vue-footer></vue-footer>
