--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Gustavo Cunha - Software Engineer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="<%=ActionView::Base.full_sanitizer.sanitize(t(:text, scope: [:about]))%>" />
+  <meta name="description" content="<%=@about.description%>" />
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Gustavo Cunha - Software Engineer" />
   <meta property="og:site_name" content="Gustavo Cunha"/>
   <meta property="og:image" content="<%=asset_url('website/avatar.jpg')%>"/>
   <meta property="og:url" content="<%=home_url(I18n.locale)%>" />
-  <meta property="og:description" content="<%=ActionView::Base.full_sanitizer.sanitize(t(:text, scope: [:about]))%>" />
+  <meta property="og:description" content="<%=@about.description%>" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="<%=I18n.locale%>" />
   <!--google font style-->
