Fix scss offense

--- a/app/assets/stylesheets/setup.scss
+++ b/app/assets/stylesheets/setup.scss
@@ -102,19 +102,19 @@ h5 {
       display: block;
     }
 
-    .pt-BR {
+    .pt-br {
       display: none;
     }
   }
 }
 
-.pt-BR {
+.pt-br {
   noscript {
     .en {
       display: none;
     }
 
-    .pt-BR {
+    .pt-br {
       display: block;
     }
   }
