--- a/app/views/application/_no_js.html.erb
+++ b/app/views/application/_no_js.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
-    <div class="en">
+  <div class="en">
     <h1>Hi,</h1>
     <h2>My name is Gustavo Cunha</h2>
     <p>Looks like you have your Javascript engine disabled in your browser. This way it is not possible to view the content of this website. Please, enable it and refresh this page for a better experience.</p>
-    </div>
-    <div class="pt-BR">
+  </div>
+  <div class="pt-br">
     <h1>Olá,</h1>
     <h2>Meu nome é Gustavo Cunha</h2>
     <p>Parece que o seu browser tem o Javascript desabilitado. Deste modo, não é possível visualizar o conteúdo deste site. Por favor, habilite e atualize esta página para uma melhor experiência.</p>
-    </div>
+  </div>
 </div>
