--- a/app/assets/stylesheets/educational.scss
+++ b/app/assets/stylesheets/educational.scss
@@ -29,7 +29,7 @@
   }
 
   .arrowpart {
-    background: asset_url('website/arrow-left-light.png') no-repeat 0 23px;
+    background: asset_url('arrow-left-light.png') no-repeat 0 23px;
   }
 
   .ex-con {
