--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -97,14 +97,14 @@
   }
 
   .arrowpart {
-    background: asset_url('website/arrow-top.png') no-repeat 50% 100%;
+    background: asset_url('arrow-top.png') no-repeat 50% 100%;
     float: none;
     height: 40px;
     width: 100%;
   }
 
   .education .arrowpart {
-    background: asset_url('website/arrow-top-light.png') no-repeat 50% 100%;
+    background: asset_url('arrow-top-light.png') no-repeat 50% 100%;
   }
 
   .ex-con {
