--- a/app/assets/stylesheets/work.scss
+++ b/app/assets/stylesheets/work.scss
@@ -51,7 +51,7 @@
 }
 
 .arrowpart {
-  background: asset_url('website/arrow-left.png') no-repeat 0 23px;
+  background: asset_url('arrow-left.png') no-repeat 0 23px;
   float: left;
   height: 50px;
   width: 15px;
