--- a/app/assets/stylesheets/i18n.scss
+++ b/app/assets/stylesheets/i18n.scss
@@ -13,7 +13,7 @@
     width: 40%;
 
     .flag {
-      background: asset_url('website/flags.png') no-repeat;
+      background: asset_url('flags.png') no-repeat;
       display: inline-block;
       height: 32px;
       opacity: .8;
