--- a/app/assets/stylesheets/technical.scss
+++ b/app/assets/stylesheets/technical.scss
@@ -56,7 +56,7 @@
   }
 
   .skill-bg {
-    background: asset_url('website/skills.png') no-repeat 0 0;
+    background: asset_url('skills.png') no-repeat 0 0;
   }
 
   .chart {
