--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <!-- Open Graph Tags -->
   <meta property="og:title" content="Gustavo Cunha - Software Engineer" />
   <meta property="og:site_name" content="Gustavo Cunha"/>
-  <meta property="og:image" content="<%=asset_url('website/avatar.jpg')%>"/>
+  <meta property="og:image" content="<%=asset_url('avatar.jpg')%>"/>
   <meta property="og:url" content="<%=home_url(I18n.locale)%>" />
   <meta property="og:description" content="<%=@about.description%>" />
   <meta property="og:type" content="website" />
@@ -33,7 +33,7 @@
 </head>
 <body id="home" class="<%= I18n.locale.downcase %>" data-locale="<%= I18n.locale %>">
   <div class="wrapper" id="wrapper">
-    <vue-header image="<%=asset_path("website/banner.jpg")%>"></vue-header>
+    <vue-header image="<%=asset_path("banner.jpg")%>"></vue-header>
     <%=yield%>
     <vue-footer></vue-footer>
   </div>
