--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,7 @@
  *= require header
  *= require slider
  *= require menu
- *= require aboutme
+ *= require about
  *= require technical
  *= require work
  *= require educational
