--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,13 @@
   <!--google font style-->
   <!--font-family: 'Open Sans', sans-serif;-->
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'modernizr', 'data-turbolinks-track' => true %>
-  <%= javascript_pack_tag 'application', type: 'application/javascript' %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true %>
 
   <noscript>
-    <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track': true %>
   </noscript>
   <!--[if lt IE 9]>
-    <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track': true %>
   <![endif]-->
   <%= csrf_meta_tags %>
 </head>
@@ -42,6 +40,8 @@
     <%=render 'no_js'%>
   </noscript>
   <%=render 'schema'%>
+  <%= javascript_include_tag 'modernizr', 'data-turbolinks-track': true %>
+  <%= javascript_pack_tag 'application', type: 'application/javascript' %>
   <%= Gon::Base.render_data %>
 </body>
 </html>
