--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,14 @@
   <meta property="og:locale" content="<%=I18n.locale%>" />
   <!--google font style-->
   <!--font-family: 'Open Sans', sans-serif;-->
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300' rel='stylesheet' type='text/css'>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true %>
+  <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,600,700,800,300', media: 'all', 'data-turbolinks-track': true, rel: 'stylesheet' %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true, rel: 'stylesheet' %>
   <%= javascript_pack_tag 'application', type: 'application/javascript' %>
-
   <noscript>
-    <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track': true %>
+    <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track': true, rel: 'stylesheet' %>
   </noscript>
   <!--[if lt IE 9]>
-    <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track': true %>
+    <%= stylesheet_link_tag 'fallback', media: 'all', 'data-turbolinks-track': true, rel: 'stylesheet' %>
   <![endif]-->
   <%= csrf_meta_tags %>
 </head>
