--- a/app/assets/stylesheets/font-awesome.scss
+++ b/app/assets/stylesheets/font-awesome.scss
@@ -10,6 +10,7 @@
   src: asset_url('fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), asset_url('fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'), asset_url('fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype'), asset_url('fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 .fa {
   display: inline-block;
