Move CSS to scoped Vue style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,20 +23,8 @@
  * 12. Footer Style
  * 13. Responsive style
 
- *= require bootstrap/dist/css/bootstrap
- *= require font-awesome
- *= require reset
+ *= require bootstrap/dist/css/bootstrap-grid
  *= require setup
- *= require header
- *= require slider
- *= require menu
- *= require about
- *= require technical
- *= require work
- *= require educational
- *= require contact
- *= require footer
- *= require i18n
- *= require responsive
+ *= require images
  *= require_self
 */
