--- a/app/assets/stylesheets/setup.scss
+++ b/app/assets/stylesheets/setup.scss
@@ -1,5 +1,5 @@
 //----------------------------------------------------
-// 1. Elements default
+// Elements default
 //----------------------------------------------------
 * {
   margin: 0;
