--- a/app/views/application/_schema.html.erb
+++ b/app/views/application/_schema.html.erb
@@ -9,7 +9,7 @@
     </p>
     <p itemprop="telephone"><%= @about.phone_number %></p>
     <p itemprop="email"><%= @about.email %></p>
-    <%= image_tag asset_url("gmmcal.png"), alt: t(:name, scope: [:template]), itemprop: "image" %>
+    <%= image_tag asset_url("avatar.jpg"), alt: t(:name, scope: [:template]), itemprop: "image" %>
     <% @work_experiences.each do |experience| %>
       <div itemprop="worksFor" itemscope itemtype="https://schema.org/Organization">
         <span itemprop="legalName"><%= experience.company_name %></span>
